--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,6 @@
 {
     "recommendations": [
         "ms-azuretools.vscode-docker",
-        "vscjava.vscode-java-pack",
-        "pivotal.vscode-spring-boot",
-        "vscjava.vscode-spring-boot-dashboard"
+        "vscjava.vscode-java-pack"
     ]
 }
