--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "ms-azuretools.vscode-docker",
         "vscjava.vscode-java-pack",
         "vscjava.vscode-spring-boot-dashboard",
-        "pivotal.vscode-spring-boot"
+        "pivotal.vscode-spring-boot",
+        "esbenp.prettier-vscode"
     ]
 }
