--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
     "eject": "react-scripts eject",
     "check-version": "check-node-version --node 16.13 --npm 8.1",
     "clean": "rimraf build",
-    "lint": "eslint src/**/*.{ts,tsx,js,jsx}",
-    "lint:fix": "eslint --fix src/**/*.{ts,tsx,js,jsx}",
+    "lint:check": "eslint src/**/*.{ts,tsx,js,jsx}",
+    "lint:write": "eslint --fix src/**/*.{ts,tsx,js,jsx}",
     "prettier:write": "prettier --write src/**/*.{ts,tsx,js,jsx}",
     "prettier:check": "prettier --check src/**/*.{ts,tsx,js,jsx}"
   },
