--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,14 @@
   "name": "myhome",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.0",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
