--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.2.0",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-router-dom": "^6.0.2",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
   },
