--- a/openapi/package.json
+++ b/openapi/package.json
@@ -7,9 +7,9 @@
     "generate:backend": "openapi-generator-cli generate -i openapi.yaml -g spring --library=spring-boot --api-package=fr.myhome.server.generated.api --model-package=fr.myhome.server.generated.model -o output_server --additional-properties=interfaceOnly=true --additional-properties=dateLibrary=java11 --additional-properties=hideGenerationTimestamp=true",
     "copy:backend": "cpx \"output_server/src/**/*\" \"../server/src\"",
     "copy:frontend": "cpx \"output_frontend/*.ts\" \"../frontend/src/generated\"",
-    "generate": "npm run generate:frontend & npm run generate:backend",
-    "copy": "npm run copy:frontend & npm run copy:backend",
-    "delete": "rimraf output_frontend & rimraf output_server & rimraf ../server/src/main/java/fr/myhome/server/generated & rimraf ./frontend/src/generated",
+    "generate": "npm run generate:frontend && npm run generate:backend",
+    "copy": "npm run copy:frontend && npm run copy:backend",
+    "delete": "rimraf output_frontend && rimraf output_server && rimraf ../server/src/main/java/fr/myhome/server/generated && rimraf ./frontend/src/generated",
     "all": "npm ci && npm run delete && npm run generate && npm run copy"
   },
   "devDependencies": {
