--- a/.github/workflows/pull_request_CI.yml
+++ b/.github/workflows/pull_request_CI.yml
@@ -56,7 +56,7 @@ jobs:
         run: npm run check-version
         working-directory: frontend
       - name: Check linter
-        run: npm run lint
+        run: npm run lint:check
         working-directory: frontend
       - name: Check prettier
         run: npm run prettier:check
