--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,33 @@
   "name": "myhome",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.3",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.58",
+    "@mui/material": "^5.2.0",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "web-vitals": "^2.1.2"
+    "react-hook-form": "^7.20.4",
+    "react-router-dom": "^6.0.2",
+    "react-toastify": "^8.1.0",
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "start:eslint": "react-scripts start",
     "build": "react-scripts build",
+    "build:eslint": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
     "check-version": "check-node-version --node 16.13 --npm 8.1",
     "clean": "rimraf build",
-    "lint": "eslint src/**/*.{ts,tsx,js,jsx}",
-    "lint:fix": "eslint --fix src/**/*.{ts,tsx,js,jsx}",
+    "lint:check": "eslint src/**/*.{ts,tsx,js,jsx}",
+    "lint:write": "eslint --fix src/**/*.{ts,tsx,js,jsx}",
     "prettier:write": "prettier --write src/**/*.{ts,tsx,js,jsx}",
     "prettier:check": "prettier --check src/**/*.{ts,tsx,js,jsx}"
   },
