--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -12,11 +12,17 @@ logging:
   level:
     fr.myhome.server:
       MyHomeServerApplication: INFO
+      tools.handler:
+        GlobalExceptionHandler: INFO
+      aop.interceptor: 
+        RepositoryInterceptor: INFO
+        ServiceInterceptor: INFO
+        ControllerInterceptor: INFO
     org:
       apache: INFO
       springframework:
-        data: INFO
-        web: INFO
+        data: ERROR
+        web: ERROR
 
 server:
   port : ${application.port}
@@ -26,7 +32,7 @@ spring:
     show-sql: false
     database-platform : org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
