--- a/server/src/test/resources/application.yml
+++ b/server/src/test/resources/application.yml
@@ -1,13 +1,18 @@
 logging:
   level:
     fr.myhome.server:
-      MyHomeServerApplication: INFO
+      MyHomeServerApplication: ERROR
+      tools.handler:
+        GlobalExceptionHandler: OFF
+      aop.interceptor: 
+        RepositoryInterceptor: ERROR
+        ServiceInterceptor: ERROR
+        ControllerInterceptor: ERROR
     org:
       apache: INFO
       springframework:
-        data: INFO
-        web: INFO
-
+        data: ERROR
+        web: ERROR
 spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
