--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,10 @@
     "java.configuration.updateBuildConfiguration": "automatic",
     "debug.terminal.clearBeforeReusing": true,
     "java.debug.settings.console": "internalConsole",
+    "editor.tabSize": 4,
+    "prettier.configPath": "frontend/.prettierrc",
+    "prettier.ignorePath": "frontend/.prettierignore",
+    "prettier.jsxSingleQuote": true,
+    "prettier.jsxBracketSameLine": true,
+    "prettier.tabWidth": 4,
 }
