First implementation of JWT for authentication
update

update

update

Update frontend

update

update

update

update

update test

update

update tests

update

update

update

update

update

update

pmd

update

update

--- a/server/src/test/resources/application.yml
+++ b/server/src/test/resources/application.yml
@@ -1,9 +1,14 @@
+application:
+
+
 logging:
   level:
     fr.myhome.server:
       MyHomeServerApplication: ERROR
-      tools.handler:
-        GlobalExceptionHandler: OFF
+      tools:
+        JwtTokenUtil: ERROR
+        handler:
+          GlobalExceptionHandler: OFF
       aop.interceptor: 
         RepositoryInterceptor: ERROR
         ServiceInterceptor: ERROR
