--- a/server/pom.xml
+++ b/server/pom.xml
@@ -112,7 +112,7 @@
       </dependency>
       <dependency>
          <groupId>org.mockito</groupId>
-         <artifactId>mockito-inline</artifactId>
+         <artifactId>mockito-junit-jupiter</artifactId>
          <version>4.2.0</version>
          <scope>test</scope>
       </dependency>
@@ -184,6 +184,26 @@
          <version>3.0.0</version>
       </dependency>
       <!--OpenApi-->
+      <!--JWT -->
+      <dependency>
+         <groupId>io.jsonwebtoken</groupId>
+         <artifactId>jjwt-api</artifactId>
+         <version>0.11.2</version>
+      </dependency>
+      <dependency>
+         <groupId>io.jsonwebtoken</groupId>
+         <artifactId>jjwt-impl</artifactId>
+         <version>0.11.2</version>
+         <scope>runtime</scope>
+      </dependency>
+      <dependency>
+         <groupId>io.jsonwebtoken</groupId>
+         <artifactId>jjwt-jackson</artifactId>
+         <!-- or jjwt-gson if Gson is preferred -->
+         <version>0.11.2</version>
+         <scope>runtime</scope>
+      </dependency>
+      <!--JWT -->
    </dependencies>
    <build>
       <plugins>
